--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url:                 http://qwtel.com
 
 # Set to '' in case of hosting on GitHub pages,
 # i.e. `http://<username>.github.io`
-baseurl:             /hydejack
+baseurl:             ''
 
 title:               PJ Hampton 
 
@@ -56,14 +56,14 @@ author:
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    twitter:         _pjhampt0n_
-    youtube:         _string___string___string_
+    twitter:         pjhampt0n
+    # youtube:         _string___string___string_
     # vimeo:           _username_
     # vine:            _username_
     # spotify:         user/_number_
     # soundcloud:      _username_
     # lastfm:          _username_
-    # instagram:       _username_
+    instagram:        pjhampton 
     # flickr:          _string_@_string_
     # 500px:           _username_
     # dribbble:        _username_
@@ -77,12 +77,12 @@ author:
     # pinterest:       _username_
     # foursquare:      _number_
     # yelp:            _string_
-    github:          _pjhampton_
+    github:          pjhampton
     # stackoverflow:   _number_/_username_
     # npm:             _username_
     # hackernews:      _username_
     # trello:          _firstname__lastname_
-    # linkedin:        _firstname_-_lastname_-_string_
+    linkedin:        pj-hampton
     # xing:            _firstname___lastname__counter_
     # blogger:         _number_
     # delicious:       _username_
