fixed up social icons some more.

--- a/_config.yml
+++ b/_config.yml
@@ -56,38 +56,13 @@ author:
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    twitter:         pjhampt0n
+    twitter:           pjhampt0n
     # youtube:         _string___string___string_
-    # vimeo:           _username_
-    # vine:            _username_
-    # spotify:         user/_number_
-    # soundcloud:      _username_
-    # lastfm:          _username_
-    instagram:        pjhampton 
-    # flickr:          _string_@_string_
-    # 500px:           _username_
-    # dribbble:        _username_
-    # behance:         _username_
-    # deviantart:      _username_
-    # ello:            _username_
-    # twitch:          _username_
-    # steam:           _number_
-    # reddit:          _username_
-    # tumblr:          _username_
-    # pinterest:       _username_
-    # foursquare:      _number_
-    # yelp:            _string_
-    github:          pjhampton
-    # stackoverflow:   _number_/_username_
-    # npm:             _username_
+    instagram:         pjhampton 
+    github:            pjhampton
+    stackoverflow:     3968703/ham-sandwich
     # hackernews:      _username_
-    # trello:          _firstname__lastname_
-    linkedin:        pj-hampton
-    # xing:            _firstname___lastname__counter_
-    # blogger:         _number_
-    # delicious:       _username_
-    # stumbleupon:     _username_
-    # paypal:          _username_
+    linkedin:          pjhampton
 
 # Setting a disqus subdomain will enable the comment section
 # disqus:            <username>
