Removed image for sidebar.

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,7 @@ description:         >
 sidebar_tags:        []
 
 # Fallback image and color if not overwritten for tag or post
-image:               /public/img/nap.jpg
-color:               '#A85641'
+color:               '#333333'
 
 # Fonts
 font:                '"PT Serif", Georgia, serif'
