--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ paginate_path:       '/page-:num/'
 
 # Markdown enabled, however don't use more than one paragraph (enforced by `>`)
 description:         >
-  developer 
+  data / development 
 
 # The tags listed as entries in the sidebar
 sidebar_tags:        []
